# gcp-simple

./: .gitignore  CHANGELOG.md  README.md  gcp-simple.cabal
.github/workflows/: ci.yml
src/Network/GCP/: Errors.hs  Simple.hs  Storage.hs
src/Network/GCP/Auth/: Credentials.hs
test/: Spec.hs
