cabal-version:       2.4
name:                gcp-simple
version:             0.0.0.0
synopsis:            A simple library for Google Compute Platform
description:         A simple library for Google Compute Platform
homepage:            https://github.com/donatello/gcp-simple
bug-reports:         https://github.com/donatello/gcp-simple/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Aditya Manthramurthy
maintainer:          Aditya Manthramurthy <aditya.mmy@gmail.com>
copyright:           2022 Aditya Manthramurthy
category:            Network, Google, Cloud
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/donatello/gcp-simple.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.15
                     , aeson ^>= 2.0.3.0
                     , conduit ^>= 1.3.4.2
                     , cryptonite ^>= 0.29
                     , directory ^>= 1.3.6.0
                     , http-client ^>= 0.7.9
                     , http-client-tls ^>= 0.3.5.3
                     , http-types ^>= 0.12.3
                     , microlens ^>= 0.4.12.0
                     , jose ^>= 0.9
                     , relude ^>= 1.0.0.1
                     , req ^>= 3.9.2
                     , time ^>= 1.9.3
                     , unliftio ^>= 0.2.20
                     , x509 ^>= 1.7.5
                     , x509-store ^>= 1.6.7

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  default-extensions: OverloadedStrings
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , DerivingVia
                    , FlexibleInstances
                    , GeneralisedNewtypeDeriving
                    , ScopedTypeVariables
                    , TypeApplications

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -haddock
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Network.GCP.Simple
                     , Network.GCP.Storage
  other-modules:       Network.GCP.Auth.Credentials
                     , Network.GCP.Errors

test-suite gcp-simple-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       gcp-simple
                     , tasty ^>= 1.4.2.1
                     , tasty-hunit ^>= 0.10.0.3
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
